--- a/styles.css
+++ b/styles.css
@@ -21,4 +21,14 @@
 
 .form-container {
     flex: 2 auto;
+    background-color: #f9f9f9;
+}
+
+.intro-text h1 {
+    font-size: 1.6rem;
+    font-weight: normal;
+}
+
+.italic {
+    font-style: italic;
 }
