--- a/styles.css
+++ b/styles.css
@@ -20,16 +20,15 @@
 
 .form-container {
     flex: 2 auto;
-    background-color: #f9f9f9;
+    background-color: #f5f5f5;
 }
 
 .intro-text {
     padding: 60px 10px 0px;
     width: 42%;
-    gap: 50px;
 }
 
-.intro-text h1 {
+.form-container h1 {
     font-size: 1.6rem;
     margin: 40px;
     font-weight: normal;
@@ -37,8 +36,38 @@
 
 .form-box {
     background-color: white;
+    padding: 25px 10px 0px;
+}
+
+.form-box h1 {
+    margin: 0px 40px 0px;
+}
+
+section {
+    margin: 0px 40px 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.form-row {
+    display: flex;
+    gap: 55px;
+    margin: 10px 0px;
+}
+
+.label-input-pair {
+    display: flex;
+    flex-direction: column;
 }
 
 .italic {
     font-style: italic;
+}
+
+.form-row:first-child {
+    margin-top: 20px;
+}
+
+.form-row:last-child {
+    margin-bottom: 30px;
 }
