--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@
 .form-box {
     background-color: white;
     padding: 25px 10px 0px;
+    box-shadow: rgb(0 0 0 / 12%) 2.5px 2.5px;
 }
 
 .form-box h1 {
@@ -94,4 +95,39 @@ input:focus {
 .error-msg {
     font-size: 0.8rem;
     color: #c70909;
+}
+
+.form-ending {
+    margin: 35px 20px;
+}
+
+button {
+    width: 250px;
+    margin-bottom: 30px;
+    padding: 15px;
+    background-color: #596D48;
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    border: none;
+    border-radius: 8px;
+    box-shadow: rgb(161 161 161 / 49%) 1px 2px;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+.form-ending p {
+    font-size: 1.2rem;
+}
+
+.form-ending a {
+    color: #596D48;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.form-ending a:hover {
+    color: #629e2d
 }
