--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: norse;
+    src: url(assets/Norse-Bold.otf);
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -6,20 +11,17 @@
 
 .main-container {
     display: flex;
-    border: 1px solid red;
-}
-
-.img-container,
-.form-container {
-    border: 1px solid red;
 }
 
 .img-container {
-    flex: auto;
+    flex: 1 600px;
+    background-image: url(assets/halie-west-25xggax4bSA-unsplash.jpg);
+    background-size: cover;
+    position: relative;
 }
 
 .form-container {
-    flex: 2 auto;
+    flex: 1 auto;
     background-color: #f5f5f5;
 }
 
@@ -130,4 +132,21 @@ button:hover {
 
 .form-ending a:hover {
     color: #629e2d
+}
+
+.logo-background {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #00000066;
+    color: white;
+    margin: 35% 0px;
+}
+
+.img-container img {
+    height: 110px;
+}
+
+.norse {
+    font-family: norse, sans-serif;
 }
